--- a/Views/PersonalPortal/PayReturn.cshtml
+++ b/Views/PersonalPortal/PayReturn.cshtml
@@ -1,34 +1,8 @@
 ﻿ّ@using Newtonsoft.Json;
 @{
-    Layout = null;
+    Layout = "_LoginLayout";
 }
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title>Repul</title>
-
-    <link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
-    <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
-
-    <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
-    <script src="~/lib/knockout/knockout-3.4.2.js"></script>
-    <script src="~/lib/knockout/knockout.validation.min.js"></script>
-    <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
-    <script src="~/js/notification.js"></script>
-
-</head>
-<body>
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
-            <div class="user_card">
-                <div class="d-flex justify-content-center">
-                    <div class="brand_logo_container">
-                        <img src="~/images/logo.svg" class="brand_logo" alt="Logo">
-                    </div>
-                </div>
                 <style>
                   body,
                     html {
@@ -71,8 +45,3 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-    </div>
-</body>
-</html>
