--- a/Views/DestinationPortals/PayReturn.cshtml
+++ b/Views/DestinationPortals/PayReturn.cshtml
@@ -1,80 +1,49 @@
 ﻿ّ@using Newtonsoft.Json;
 @{
-    Layout = null;
+    Layout = "_LoginLayout";
 }
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title>Repul</title>
+<style>
+    body,
+    html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background: #7E57C2 !important;
+    }
 
-    <link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
-    <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
+    .user_card {
+        background: #B39DDB;
+    }
 
-    <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
-    <script src="~/lib/knockout/knockout-3.4.2.js"></script>
-    <script src="~/lib/knockout/knockout.validation.min.js"></script>
-    <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
-    <script src="~/js/notification.js"></script>
+    .brand_logo_container {
+        background: #7E57C2;
+    }
+</style>
+<div id="login_form">
+    <div id="login_form_box" class="justify-content-center form_container">
+        @if (ViewBag.OK == "OK")
+        {
 
-</head>
-<body>
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
-            <div class="user_card">
-                <div class="d-flex justify-content-center">
-                    <div class="brand_logo_container">
-                        <img src="~/images/logo.svg" class="brand_logo" alt="Logo">
-                    </div>
+            <div style="width:250px;margin:auto;">
+                <div>
+                    <h3>
+                        پرداخت با موفقیت انجام شد
+                    </h3>
                 </div>
-                <style>
-                    body,
-                    html {
-                        margin: 0;
-                        padding: 0;
-                        height: 100%;
-                        background: #7E57C2 !important;
-                    }
-
-                    .user_card {
-                        background: #B39DDB;
-                    }
-
-                    .brand_logo_container {
-                        background: #7E57C2;
-                    }
-                </style>
-                <div id="login_form">
-                    <div id="login_form_box" class="justify-content-center form_container">
-                        @if (ViewBag.OK == "OK")
-                        {
-
-                            <div style="width:250px;margin:auto;">
-                                <div>
-                                    <h3>
-                                        پرداخت با موفقیت انجام شد
-                                    </h3>
-                                </div>
-                            </div>
-                        }
-                        else
-                        {
-                            <div style="width:250px;margin:auto;">
-                                <div>
-                                    <h3>
-                                        پرداخت با موفقیت انجام نشد
-                                    </h3>
-                                </div>
-                            </div>
-                        }
-
-                    </div>
-                </div>
-
             </div>
-        </div>
+        }
+        else
+        {
+            <div style="width:250px;margin:auto;">
+                <div>
+                    <h3>
+                        پرداخت با موفقیت انجام نشد
+                    </h3>
+                </div>
+            </div>
+        }
+
     </div>
-</body>
-</html>
+</div>
+
