--- a/Views/PersonalPortal/Index.cshtml
+++ b/Views/PersonalPortal/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <div id="r_title">درگاه های شخصی</div>
 <div id="page_box">
-    <div data-bind="foreach: portals">
+    <div class="page-grid" data-bind="foreach: portals">
         <div class="r_row">
             <div class="row">
                 <div class="col-md-3">
