--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
     <link href="~/lib/bootstrap/mdb.min.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css?v=@(new Random().Next(100000,99999999))" rel="stylesheet" />
     <link href="~/lib/animate/animate.css" rel="stylesheet" />
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
@@ -18,6 +18,7 @@
     <script src="~/lib/bootstrap/bootstrap.min.js"></script>
     <script src="~/js/notification.js"></script>
     <script src="~/lib/bootstrap/mdb.min.js"></script>
+    <script src="~/lib/bodyscroll/bodyscroll.js"></script>
 </head>
 <body>
     <div id="wrapper">
@@ -46,7 +47,7 @@
             <div id="paging_box">
                 <div class="head-title-box">
                     <div class="addr-title">
-                        @ViewData["Title"]
+                        @*@ViewData["Title"]*@
                     </div>
                     <div class="head-tool-box">
                     </div>
@@ -59,7 +60,7 @@
         </div>
     </div>
     @*<script src="~/lib/apprun/apprun-html.js"></script>*@
-    <script src="~/js/site.js"></script>
+    <script src="~/js/site.js?v=@(new Random().Next(100000,99999999))"></script>
 
 
 </body>
