--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -6,11 +6,11 @@
 
 <head>
     <title>Repul</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="~/lib/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="~/lib/pNotify/pnotify.custom.min.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css?v=@(new Random().Next(100000,99999999))" rel="stylesheet" />
     <link href="~/lib/bootstrap/mdb.min.css" rel="stylesheet" />
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
@@ -18,12 +18,19 @@
     <script src="~/lib/knockout/knockout.validation.min.js"></script>
     <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
     <script src="~/js/notification.js"></script>
-
+    <style>
+        .user_card {
+            margin: auto;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
-<!--Coded with love by Mutiullah Samim-->
 <body>
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
+    <div class="wrapper">
+        <div class="container-fluid">
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
